--- a/style.css
+++ b/style.css
@@ -242,6 +242,10 @@ animation: tiny-bounce 0.15s ease;
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
+  position: relative;
+  top: -10px;
+  right: -10px;
+  margin: 0;
 }
 
 .close-button:hover,
